@@ -4,6 +4,7 @@
 	- q3textbrowser replaced by qtextbrowser
 	- display content file pattern info if deabug info is enabled
 	- q3frame replaced by qframe
+	- q3whatsthis removed
 
 17. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- handle files larger than 1tb fixed
